tests/should_fail/sf019_missing_module_name.hs
-- Should fail: module keyword without a module name
module where

f :: Int
f = 42
